# Model

./: .gitignore  README.md  pyproject.toml
src/racing_form_etl/: __init__.py  __main__.py  cli.py  config.py
src/racing_form_etl/api/: ingest.py  the_racing_api_client.py
src/racing_form_etl/db/: migrations.py
src/racing_form_etl/model/: features.py  predict.py  train.py
src/racing_form_etl/ui/: app.py
src/racing_form_etl/ui/tabs/: api_tab.py
tests/: test_api_client_openapi_alignment.py  test_api_pipeline.py  test_api_ui_logic.py  test_cli_region_mapping.py
tests/fixtures/: racecards.json  results.json
